# gather_insight

./: .gitignore  README.md  gather_insight_system_spec.md  pyproject.toml
config/: channels.yaml  people.yaml  phase_7_1.example.yaml  phase_7_2b.example.yaml  scoring.yaml  semantic_alignment.example.yaml  sources.yaml  topics.yaml  yc_golden_selection_v1.json
docs/: DATA_CONTRACT.md  DECISIONS.md  DUAL_SOURCE_DATA_CONTRACT.md  LOGGING.md  PHASE_6_6_1.md  PHASE_6_6_SOURCE_RESOLUTION.md  PHASE_6_7_REAL_SOURCE_ACCEPTANCE.md  PHASE_6_8_ALIGNMENT_DESIGN.md  PHASE_6_8_REAL_YC_REPORT.md  PHASE_6_9_EXISTING_ALIGNMENT_REVIEW.md  PHASE_6_9_REAL_YC_REPORT.md  PHASE_7_0_NO_ULISTEN_TREND_MODE.md  PHASE_7_1_1_HUMAN_GATE.md  PHASE_7_1_DESIGN.md  PHASE_7_1_REAL_YC_REPORT.md  PHASE_7_2A_NAVAL_RECENT_SIX.md  PHASE_7_2B_THEME_CONSOLIDATION.md  PHASE_7_2C_HUMAN_THEME_GATE.md  SOURCE_POLICY.md  SYSTEM_SPEC.md  TEST_PLAN.md  YC_PRIVATE_REVIEW_VIEWS.md  gather_insight_dual_source_workflow.md
gather_insight/: __init__.py  cli.py  run_logging.py
inbox/: external_insights.yaml  videos.yaml
prompts/: derive_insights.md  detect_conflicts.md  extract_candidates.md  generate_publish_drafts.md  normalize_transcript.md
schemas/: candidate.schema.json  export_bundle.schema.json  media_evidence.schema.json  media_manifest.schema.json  phase_7_1_1_accepted_claim.schema.json  phase_7_1_1_claim_merge.schema.json  phase_7_1_1_frozen_golden.schema.json  phase_7_1_1_review_decision.schema.json  phase_7_1_claim.schema.json  phase_7_1_claim_relation.schema.json  phase_7_1_evidence.schema.json  (+18 more)
(+220 files in other folders)
